--- a/src/templates/landing/home.html
+++ b/src/templates/landing/home.html
@@ -266,7 +266,7 @@
                                         {% endif %}
                                     {% endif %}
                                     {% if schedule.get_current_status == 'past' and schedule.video_url %}
-                                        <a href="#" class="b4VolverVer a ver clickVideo popup" data-urlvideo="{{schedule.video_url}}">Volver a ver</a>
+                                        <a href="#" class="b4VolverVer clickVideo b4ButtonRelative popup" data-urlvideo="{{schedule.video_url}}">Volver a ver</a>
                                     {% endif %}
                                 {% endif %}
                                </div>
