--- a/src/templates/landing_2/common/_base.html
+++ b/src/templates/landing_2/common/_base.html
@@ -5,15 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" >
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title></title>
-<!-- 	<link rel="icon" type="image/png" href="static/web_2/img/favicon/256x256.png"/>
-    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="static/web_2/img/favicon/114x114.png">
-    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="static/web_2/img/favicon/72x72.png">
-    <link rel="apple-touch-icon-precomposed" href="static/web_2/img/favicon/57x57.png"> -->
+<!-- 	<link rel="icon" type="image/png" href="/static/web_2/img/favicon/256x256.png"/>
+    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="/static/web_2/img/favicon/114x114.png">
+    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="/static/web_2/img/favicon/72x72.png">
+    <link rel="apple-touch-icon-precomposed" href="/static/web_2/img/favicon/57x57.png"> -->
     {% block cssadicional %}
     {% endblock %}
-    <link rel="stylesheet" type="text/css" href="static/web_2/css/styles.css?v=1{{ BUILD_ID }}"/>
-    <link rel="stylesheet" href="static/web_2/js/validationform/validationEngine.jquery.css">
-    <!-- <link rel="stylesheet" type="text/css" href="static/web_2/css/blocks_styl.css?v=2{{ BUILD_ID }}"/> -->
+    <link rel="stylesheet" type="text/css" href="/static/web_2/css/styles.css?v=1{{ BUILD_ID }}"/>
+    <link rel="stylesheet" href="/static/web_2/js/validationform/validationEngine.jquery.css">
+    <!-- <link rel="stylesheet" type="text/css" href="/static/web_2/css/blocks_styl.css?v=2{{ BUILD_ID }}"/> -->
 </head>
 
 
@@ -32,10 +32,10 @@
     <a href="#" class="icon-whatsapp wspFixed"></a>
     <!-- <a href="#" class="openSidebarMobile icon-menu"></a> -->
     <!-- <div class="sidebarContentMobile"></div> -->
-    <!-- <script src="static/web_2/js/jquery-3.2.1.min.js" type="text/javascript"></script> -->
-    <script src="static/web_2/js/jquery-3.7.1.min.js" type="text/javascript"></script>
-    <script src="static/web_2/js/main.js" type="text/javascript"></script>
-    <script src="static/web_2/js/validationform/jquery.validationEngine.js"></script>
+    <!-- <script src="/static/web_2/js/jquery-3.2.1.min.js" type="text/javascript"></script> -->
+    <script src="/static/web_2/js/jquery-3.7.1.min.js" type="text/javascript"></script>
+    <script src="/static/web_2/js/main.js" type="text/javascript"></script>
+    <script src="/static/web_2/js/validationform/jquery.validationEngine.js"></script>
 
     <div class="coockies" id="elCoockie">
         <div class="grilla">
@@ -47,7 +47,7 @@
     </div>
 
     <!-- <a href="" class="empresafx">
-        <img src="static/web_2/img/logocallirgos.jpeg" alt="">
+        <img src="/static/web_2/img/logocallirgos.jpeg" alt="">
     </a> -->
     {% if company.warning_img%}
     <div class="popUpInfo">
