--- a/src/static/web_2/stylus/blocks/s4.styl
+++ b/src/static/web_2/stylus/blocks/s4.styl
@@ -4,17 +4,27 @@
     position relative
     z-index 30
     .gTitle
-        width 500px
+        width 300px
 
 .b4SelectGroup
     grid-gap 15px
-    width 50%
+    width 60%
+    position relative
+    &:before
+        content ''
+        background-image url(../img/credicorp/icon-filter.svg)
+        backgroundsize()
+        width 20px
+        height 15px
+        centerY()
+        right calc(100% + 24px)
 
 .b4ItemSelect
     position relative
     height 56px
     border-radius 10px
-    border 1px solid #686868
+    border 1px solid #151515
+    background #151515
     scrollbar(#fff,#1B1B1B,3,1)
     ul
         position absolute
