--- a/src/static/web_2/css/builds/s27.css
+++ b/src/static/web_2/css/builds/s27.css
@@ -1,24 +1,1 @@
-.b27 .gTitle {
-  margin-bottom: 60px;
-}
-.b27Wrap {
-  grid-gap: 28px;
-}
-.b27Wrap .b6Item {
-  padding-top: 0;
-}
-.b27Wrap .b6Item img {
-  position: relative;
-  width: 100%;
-  height: auto;
-}
-.b27Wrap .b6Info p.name {
-  font-size: 16px;
-}
-.b27Wrap .b6Info p.date {
-  margin-bottom: 10px;
-}
-.b27Wrap .b6Info {
-  padding: 15px 20px;
-  padding-top: 0px;
-}
+.b27 .gTitle{margin-bottom:60px}.b27Wrap{grid-gap:28px}.b27Wrap .b6Item{padding-top:0}.b27Wrap .b6Item img{position:relative;width:100%;height:auto}.b27Wrap .b6Info p.name{font-size:16px}.b27Wrap .b6Info p.date{margin-bottom:10px}.b27Wrap .b6Info{padding:15px 20px;padding-top:0}
