--- a/src/static/web_2/css/builds/s3.css
+++ b/src/static/web_2/css/builds/s3.css
@@ -1,96 +1,1 @@
-.b3Wrap {
-  position: relative;
-}
-.b3Left {
-  width: 510px;
-  position: sticky;
-  top: 120px;
-}
-.b3Left .gTitle {
-  margin-bottom: 32px;
-}
-.b3Right {
-  width: calc(100% - 510px);
-  padding-left: 90px;
-  grid-gap: 80px;
-}
-.b3Item p.name {
-  font-size: 24px;
-  margin-bottom: 0px;
-  font-family: 'InterTight-SemiBold', sans-serif;
-  line-height: normal;
-  color: #e9e9e9;
-}
-@media screen and (max-width: 1600px) {
-  .b3Item p.name {
-    font-size: calc(18px + (24 - 18) * ((100vw - 375px) / (1920 - 375)));
-  }
-}
-.b3Item figure {
-  border-radius: 20px;
-  overflow: hidden;
-  width: 240px;
-}
-.b3Item figure img {
-  width: 100%;
-}
-.b3Info {
-  width: calc(100% - 240px);
-  padding-left: 25px;
-}
-.b3Info .gParrafo {
-  font-size: 16px;
-  margin-top: 16px;
-}
-@media screen and (max-width: 1366px) {
-  .b3Left {
-    width: 450px;
-  }
-  .b3Right {
-    width: calc(100% - 450px);
-  }
-}
-@media screen and (max-width: 1024px) {
-  .b3Left {
-    width: 400px;
-  }
-  .b3Right {
-    width: calc(100% - 400px);
-    padding-left: 40px;
-  }
-}
-@media screen and (max-width: 1024px) {
-  .b3Wrap {
-    -webkit-box-orient: vertical;
-    -moz-box-orient: vertical;
-    -o-box-orient: vertical;
-    -webkit-flex-direction: column;
-    -ms-flex-direction: column;
-    flex-direction: column;
-  }
-  .b3Left,
-  .b3Right {
-    width: 100%;
-    padding: 0;
-  }
-  .b3Left {
-    position: relative;
-    top: 0;
-    margin-bottom: 30px;
-  }
-  .b3Right {
-    grid-gap: 40px;
-  }
-  .b3Item {
-    grid-gap: 20px;
-  }
-}
-@media screen and (max-width: 480px) {
-  .b3Item figure {
-    width: 100%;
-  }
-  .b3Info {
-    width: 100%;
-    padding: 0;
-  }
-}
+.b3Wrap{position:relative}.b3Left{width:510px;position:sticky;top:120px}.b3Left .gTitle{margin-bottom:32px}.b3Right{width:calc(100% - 510px);padding-left:90px;grid-gap:80px}.b3Item p.name{font-size:24px;margin-bottom:0;font-family:'InterTight-SemiBold',sans-serif;line-height:normal;color:#e9e9e9}@media screen and (max-width:1600px){.b3Item p.name{font-size:calc(18px + (24 - 18) * ((100vw - 375px) / (1920 - 375)))}}.b3Item figure{border-radius:20px;overflow:hidden;width:240px}.b3Item figure img{width:100%}.b3Info{width:calc(100% - 240px);padding-left:25px}.b3Info .gParrafo{font-size:16px;margin-top:16px}@media screen and (max-width:1366px){.b3Left{width:450px}.b3Right{width:calc(100% - 450px)}}@media screen and (max-width:1024px){.b3Left{width:400px}.b3Right{width:calc(100% - 400px);padding-left:40px}}@media screen and (max-width:1024px){.b3Wrap{-webkit-box-orient:vertical;-moz-box-orient:vertical;-o-box-orient:vertical;-webkit-flex-direction:column;-ms-flex-direction:column;flex-direction:column}.b3Left,.b3Right{width:100%;padding:0}.b3Left{position:relative;top:0;margin-bottom:30px}.b3Right{grid-gap:40px}.b3Item{grid-gap:20px}}@media screen and (max-width:480px){.b3Item figure{width:100%}.b3Info{width:100%;padding:0}}
