--- a/src/templates/landing_2/common/_header.html
+++ b/src/templates/landing_2/common/_header.html
@@ -15,34 +15,34 @@
                 {% if header_section.show_about_section %}
                     <a href="#acerca" class="headerAnclaBlock">
                         {{header_section.about_section_header_name}}
-                        <span class="lineActive" style="background:#008ac9;">
+                        <span class="lineActive" style="background:#FFFFFF;">
                         </span>
                     </a>
                 {% endif %}
                 {% if header_section.show_schedule_section %}
                     <a href="#agenda" class="headerAnclaBlock">
                         {{header_section.schecule_header_name}}
-                        <span class="lineActive" style="background:#008ac9;">
+                        <span class="lineActive" style="background:#FFFFFF;">
                         </span>
                     </a>
                 {% endif %}
                 {% if header_section.show_exhibitors_section %}
                     <a href="#expositor" class="headerAnclaBlock">
                         {{header_section.exhibitors_header_name}}
-                        <span class="lineActive" style="background:#008ac9;"></span>
+                        <span class="lineActive" style="background:#FFFFFF;"></span>
                     </a>
                 {% endif %}
                 {% if header_section.show_blog_section %}
                     <a href="#blog" class="headerAnclaBlock">
                             {{header_section.blog_header_name}}
-                        <span class="lineActive" style="background:#008ac9;">
+                        <span class="lineActive" style="background:#FFFFFF;">
                         </span>
                     </a>
                 {% endif %}
                 {% if header_section.show_sponsors_section %}
                     <a href="#empresa" class="headerAnclaBlock">
                         {{header_section.sponsors_header_name}}
-                        <span class="lineActive" style="background:#008ac9;">
+                        <span class="lineActive" style="background:#FFFFFF;">
                         </span>
                     </a>
                 {% endif %}
