--- a/src/static/web_2/css/builds/z-header.css
+++ b/src/static/web_2/css/builds/z-header.css
@@ -35,9 +35,9 @@ body.pageBlogDetalle .headerOptionsSessions {
   position: fixed;
   bottom: 0;
   width: 100%;
-  background: transparent;
+  background: #fff;
   padding: 40px 0px;
-  z-index: 1000;
+  z-index: 2000;
   -webkit-box-shadow: 0px 10px 10px 2px rgba(0,0,0,0.2);
   box-shadow: 0px 10px 10px 2px rgba(0,0,0,0.2);
 }
@@ -65,6 +65,7 @@ body.pageBlogDetalle .headerOptionsSessions {
 .coockies .gParrafo {
   width: calc(100% - 200px);
   padding-right: 30px;
+  color: #000;
 }
 .coockies .gButton {
   width: 200px;
