--- a/src/static/web_2/stylus/blocks/s1.styl
+++ b/src/static/web_2/stylus/blocks/s1.styl
@@ -123,7 +123,7 @@
 		position relative
 		z-index 5
 		flexg(flex-end,space-between)
-		padding-bottom 22vh
+		padding-bottom 10vh
 
 .b1Info
 	h4
@@ -144,13 +144,16 @@
 			textg(t-400,normal,#FFFFFF)
 	.gButton
 		height 56px
-		background #0ACFC9
+		background #fff
 		font-size 20px
 		textg(t-500,normal,#0D0D0D)
 		padding 0px 55px
+	.imgLogo
+		width 450px
 
 .b1Bottom
 	cursor pointer
+	padding-bottom 25vh
 	p
 		margin-bottom 14px
 		font-size 18px
@@ -195,13 +198,48 @@
 	color #000
 	font-size 22px
 
+.b1List
+	display grid
+	grid-gap 16px
+	margin-top 60px
+
+.b1Item
+	background rgba(#fff,0.5)
+	border-radius 8px
+	padding 0px 10px
+	height 40px
+	flexg(center,center)
+	width fit-content
+	grid-gap 10px
+	img
+		width 18px
+	p
+		margin-bottom 0px
+		font-size 18px
+		textg(t-400,normal,#000000)
+
+.b1Itemwrap
+	border-radius 8px
+	overflow hidden
+	width fit-content
+	.b1Item
+		border-radius 0px
+
 @media screen and (max-width 1366px)
 	.b1
 		.grilla
 			padding-bottom 10vh
 	.b1Info
 		.imgLogo
-			width 450px
+			width 350px
+
+@media screen and (max-width 1280px)
+	.b1
+		.grilla
+			padding-bottom 10vh
+	.b1Info
+		.imgLogo
+			width 300px
 			
 @media screen and (max-width 1024px)
 	.b1
@@ -209,11 +247,12 @@
 			padding-bottom 15vh
 	.b1Info
 		.imgLogo
-			width 450px
+			width 300px
 
 @media screen and (max-width 480px)
 	.b1
-		min-height 680px
+		padding-top 15vh
+		min-height 750px
 		.grilla
 			padding-bottom 5vh
 			flex-direction column
@@ -222,5 +261,13 @@
 			align-items flex-start
 	.b1Info
 		.imgLogo
-			width 80%
-	
+			width 200px
+	.b1Bottom
+		padding-bottom 0
+	.b1Itemwrap
+		align-items flex-start
+	.b1Item
+		padding 10px
+		height auto
+		width 100%
+		justify-content flex-start
