--- a/src/static/web_2/stylus/blocks/s30.styl
+++ b/src/static/web_2/stylus/blocks/s30.styl
@@ -1,6 +1,2 @@
-// @media screen and (max-width 1440px)
-// @media screen and (max-width 1366px)
-// @media screen and (max-width 1280px)
-// @media screen and (max-width 1024px)
-// @media screen and (max-width 768px)
-// @media screen and (max-width 480px)
+.b30
+    height 85vh
