--- a/src/static/web_2/stylus/blocks/s31.styl
+++ b/src/static/web_2/stylus/blocks/s31.styl
@@ -1,6 +1,6 @@
-// @media screen and (max-width 1440px)
-// @media screen and (max-width 1366px)
-// @media screen and (max-width 1280px)
-// @media screen and (max-width 1024px)
-// @media screen and (max-width 768px)
-// @media screen and (max-width 480px)
+.b31
+    figure
+        width 420px
+        margin auto
+        img
+            width 100%
