--- a/src/static/web_2/stylus/blocks/z-header.styl
+++ b/src/static/web_2/stylus/blocks/z-header.styl
@@ -29,9 +29,9 @@ body
 	position fixed
 	bottom 0
 	width 100%
-	background transparent
+	background #fff
 	padding 40px 0px
-	z-index 1000
+	z-index 2000
 	box-shadow 0px 10px 10px 2px rgba(#000,0.2)
 	.grilla
 		max-width 1000px
@@ -39,6 +39,7 @@ body
 	.gParrafo
 		width calc(100% - 200px)
 		padding-right 30px
+		color #000
 	.gButton
 		width 200px
 
