Add footer youtube

--- a/src/templates/landing_2/common/_footer.html
+++ b/src/templates/landing_2/common/_footer.html
@@ -21,6 +21,9 @@
                 {% if footer.facebook %}
                     <a href="{{footer.facebook}}" target="_blank" class="icon-face"></a>
                 {% endif %}
+                {% if footer.youtube %}
+                    <a href="{{footer.youtube}}" target="_blank" class="icon-youtube"></a>
+                {% endif %}
             </div>
             <div class="fContact fItem">
                 <a>Powered by: RealVirtual</a>
