--- a/src/templates/landing_2/home.html
+++ b/src/templates/landing_2/home.html
@@ -56,16 +56,16 @@
             <a href="#" class="gButton" id="b1ButtonRegister">Regístrate</a>
             <div class="b1List">
                 <div class="b1Item">
-                    <img src="{{STATIC_URL}}img/credicorp/marker-black.svg" alt="">
+                    <img src="/static/web_2/img/credicorp/marker-black.svg" alt="">
                     <p>{{home_page.address_description|default:""}}</p>
                 </div>
                 <div class="b1Itemwrap f aic jcfs ffrw">
                     <div class="b1Item">
-                        <img src="{{STATIC_URL}}img/credicorp/calendar2-black.svg" alt="">
+                        <img src="/static/web_2/img/credicorp/calendar2-black.svg" alt="">
                         <p>{{home_page.date_description|default:""}}</p>
                     </div>
                     <div class="b1Item">
-                        <img src="{{STATIC_URL}}img/credicorp/timer-black.svg" alt="">
+                        <img src="/static/web_2/img/credicorp/timer-black.svg" alt="">
                         <p>{{home_page.time_description|default:""}}</p>
                     </div>
                 </div>
